fixed Overflow on cleaning page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -384,3 +384,14 @@ width: 100% !important;}
 	overflow-y: scroll;
 	height: 40vh;
 }
+
+.box{
+	font-size:1.2rem;
+	font-weight: 600;
+}
+
+
+.overflowCard{
+	height: 90vh;
+	overflow-y: auto;
+}
